--- a/node_exporter/docker_install.yml
+++ b/node_exporter/docker_install.yml
@@ -1,5 +1,5 @@
 --- # Install Docker
-- hosts: vagrant
+- hosts: docker
   remote_user: vagrant
   become: yes
   become_method: sudo
@@ -28,4 +28,4 @@
     - name: Start Docker Service
       service: name=docker state=started
     - name: add user to docker group
-      user: name=vagrant group=docker append=yes 
+      user: name=vagrant group=docker append=yes
